@@ -21,16 +21,6 @@ class AmphiScreen(Screen):
         )
         quit_.bind(on_release = self.quit_)
 
-        settings = Button(
-            background_normal='4.png',
-            background_down='4.png',
-            size_hint=(None, None),
-            size=(50, 50),
-            pos_hint = {'x': 0, 'y': .8},
-            padding=(10, 0, 10, 0)
-        )
-        settings.bind(on_press=self.settings)
-
         back_to_main = Button(
             background_normal='5.png',
             background_down='5.png',
@@ -42,7 +32,6 @@ class AmphiScreen(Screen):
         back_to_main.bind(on_press=self.dismiss)
         quit_.bind(on_press=self.quit_)
         header.add_widget(back_to_main)
-        header.add_widget(settings)
         header.add_widget(quit_)
 
         #hna kanbdaw b les buttons
@@ -187,9 +176,6 @@ class AmphiScreen(Screen):
         self.manager.transition = transition
         self.manager.current = 'main'
 
-    def settings(self, instance):
-        self.manager.current = 'settings'
-
     def quit_(self, instance):
         App.get_running_app().stop()
     
@@ -214,16 +200,6 @@ class AmphiFinal(Screen):
         )
         quit_.bind(on_release=self.quit_)
 
-        settings = Button(
-            background_normal='4.png',
-            background_down='4.png',
-            size_hint=(None, None),
-            size=(50, 50),
-            pos_hint={'x': 0, 'y': .8},
-            padding=(10, 0, 10, 0)
-        )
-        settings.bind(on_press=self.settings)
-
         back_to_main = Button(
             background_normal='5.png',
             background_down='5.png',
@@ -235,7 +211,6 @@ class AmphiFinal(Screen):
         back_to_main.bind(on_press=self.dismiss)
         quit_.bind(on_press=self.quit_)
         header.add_widget(back_to_main)
-        header.add_widget(settings)
         header.add_widget(quit_)
         #hadi gher bach nhabt timetable b .1
         self.pusher = Label(text="", color=(0, 0, 0, 1),size_hint=(.2, .1))
@@ -383,9 +358,6 @@ class AmphiFinal(Screen):
         transition = SlideTransition(direction='right')
         self.manager.transition = transition
         self.manager.current = 'amphi'
-
-    def settings(self, instance):
-        self.manager.current = 'settings'
 
     def quit_(self, instance):
         App.get_running_app().stop()
