@@ -19,16 +19,6 @@ class SalleScreen(Screen):
         )
         quit_.bind(on_release=self.quit_)
 
-        settings = Button(
-            background_normal='4.png',
-            background_down='4.png',
-            size_hint=(None, None),
-            size=(50, 50),
-            pos_hint={'x': 0, 'y': .8},
-            padding=(10, 0, 10, 0)
-        )
-        settings.bind(on_press=self.settings)
-
         back_to_main = Button(
             background_normal='5.png',
             background_down='5.png',
@@ -40,7 +30,6 @@ class SalleScreen(Screen):
         back_to_main.bind(on_press=self.dismiss)
         quit_.bind(on_press=self.quit_)
         header.add_widget(back_to_main)
-        header.add_widget(settings)
         header.add_widget(quit_)
 
 #All the buttons
@@ -193,9 +182,6 @@ class SalleScreen(Screen):
         self.manager.transition = transition
         self.manager.current = 'main'
 
-    def settings(self, instance):
-        self.manager.current = 'settings'
-
     def quit_(self, instance):
         App.get_running_app().stop()
 
@@ -221,16 +207,6 @@ class SalleSections(Screen):
         )
         quit_.bind(on_release=self.quit_)
 
-        settings = Button(
-            background_normal='4.png',
-            background_down='4.png',
-            size_hint=(None, None),
-            size=(50, 50),
-            pos_hint={'x': 0, 'y': .8},
-            padding=(10, 0, 10, 0)
-        )
-        settings.bind(on_press=self.settings)
-
         back_to_main = Button(
             background_normal='5.png',
             background_down='5.png',
@@ -242,7 +218,6 @@ class SalleSections(Screen):
         back_to_main.bind(on_press=self.dismiss)
         quit_.bind(on_press=self.quit_)
         header.add_widget(back_to_main)
-        header.add_widget(settings)
         header.add_widget(quit_)
 
         self.dropdown = DropDown(size_hint=(None, .1))
@@ -393,9 +368,6 @@ class SalleSections(Screen):
         transition = SlideTransition(direction='right')
         self.manager.transition = transition
         self.manager.current = 'salle'
-
-    def settings(self, instance):
-        self.manager.current = 'settings'
 
     def quit_(self, instance):
         App.get_running_app().stop()
