@@ -1,3 +1,2 @@
 -Add the methods to save and load data from data.txt
--I also should work a little bit on the settings
 
